--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-
+{
+  "name": "flipr-backend",
+  "version": "1.0.0",
+  "description": "Backend for the FLIPR submission task",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.1",
+    "dotenv": "^16.4.5"
+  }
+}
